.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Approval_Manager_PIN_Settings__c/Shift_Approval_Manager_PIN_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Shift Approval Manager PIN Settings</label>
</CustomObject>