.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Approval_Manager_PIN_Settings__c/fields/Number_of_Days_before_PIN_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_before_PIN_Expiry__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enter the number of days before PIN Expiry.  0 = Do not expire.</description>
    <inlineHelpText>Enter the number of days before PIN Expiry.  0 = Do not expire.</inlineHelpText>
    <label>Number of Days before PIN Expiry</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>