.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Approval_Manager_PIN_Settings__c/fields/Temp_PIN_Internation_Phone_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Temp_PIN_Internation_Phone_Currency_Code__c</fullName>
    <defaultValue>TEXT(+61)</defaultValue>
    <label>Temp PIN Internation Phone Currency Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>