.vscode/allianceuat_compare/force-app/main/default/objects/Shift_Approval_Manager_PIN_Settings__c/fields/Temp_PIN_Numner_of_Hours_before_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Temp_PIN_Numner_of_Hours_before_Expiry__c</fullName>
    <defaultValue>24</defaultValue>
    <label>Temp PIN Numner of Hours before Expiry</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>